--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 # Windows でのみインストール
-pywin32==306; sys_platform == "win32"
-fastapi
-uvicorn
+pywin32==306; platform_system == "Windows"
+pywinpty==2.0.13; platform_system == "Windows"
+
+fastapi==0.115.8
+uvicorn==0.34.0
 gunicorn
 pymysql
 sqlalchemy
@@ -42,7 +44,6 @@ distro==1.9.0
 docopt==0.6.2
 et-xmlfile==1.1.0
 executing==2.0.1
-fastapi==0.115.8
 fastjsonschema==2.19.1
 Flask==3.0.0
 Flask-Cors==4.0.0
@@ -126,7 +127,6 @@ pandocfilters==1.5.1
 parso==0.8.4
 peewee==3.17.6
 pillow==10.4.0
-pipwin==0.5.2
 platformdirs==4.2.2
 plotly==5.22.0
 prometheus_client==0.20.0
@@ -149,11 +149,8 @@ PyPrind==2.11.3
 pyreadline3==3.4.1
 pySmartDL==1.3.4
 python-dateutil==2.8.2
-python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2023.3.post1
-pywin32==306
-pywinpty==2.0.13
 PyYAML==6.0.1
 pyzmq==26.0.3
 qtconsole==5.5.2
@@ -163,46 +160,20 @@ requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.7.1
-rpds-py==0.18.1
 scikit-learn==1.5.1
 scipy==1.14.0
 seaborn==0.13.2
-Send2Trash==1.8.3
-setuptools==71.0.4
-six==1.16.0
-skl2onnx==1.17.0
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.5
-SpeechRecognition==3.10.4
 SQLAlchemy==2.0.23
 stack-data==0.6.3
 starlette==0.45.3
 streamlit==1.37.1
 sympy==1.13.2
-tenacity==8.5.0
-terminado==0.18.1
-threadpoolctl==3.5.0
-tinycss2==1.3.0
-toml==0.10.2
-toolz==0.12.1
-tornado==6.4
 tqdm==4.66.4
 traitlets==5.14.3
-types-python-dateutil==2.9.0.20240316
-typing_extensions==4.9.0
-tzdata==2023.3
-tzlocal==5.2
-uri-template==1.3.0
 urllib3==2.1.0
 uvicorn==0.34.0
 watchdog==4.0.1
-wcwidth==0.2.13
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.8.0
 Werkzeug==3.0.1
-widgetsnbextension==4.0.11
 xgboost==2.1.0
 yarl==1.9.4
 yfinance==0.2.41
