--- a/requirements.txt
+++ b/requirements.txt
@@ -121,7 +121,7 @@ openai==1.42.0
 openpyxl==3.1.5
 optuna==3.6.1
 overrides==7.7.0
-packaging==24.1
+packaging
 pandas==2.1.4
 pandocfilters==1.5.1
 parso==0.8.4
